<resources>
    <string name="app_name">Android Tunes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="album_cover_image">album cover</string>
    <string name="track_name_view">track name</string>
    <string name="artist_name">artist name</string>
    <string name="track_price">track price</string>
    <string name="track_number">1</string>
    <string name="hello_pop_fragment">hello_pop_fragment</string>
    <string name="hello_classic_fragment">hello_classic_fragment</string>
    <string name="hello_rock_fragment">hello_rock_fragment</string>
</resources>
